--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@
     margin: 0 auto;
     border: solid black 1px;
 }
+.black{
+    background-color: black;
+}
+.container.div{
+    width: 30px;
+    height: 30px;
+}
