--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 
-
+body{
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    
+}
 .container{
     width: 600px;
     height: 600px;
-    margin: 0 auto;
-    border: solid black 5px;
+    border: solid #888 5px;
     display: flex;
     flex-wrap: wrap;
     border-radius: 10px;
+    background-color: white;
+    flex-shrink: 0;
 }
 .black{
     background-color: black;
@@ -15,4 +21,17 @@
 .container > div{
     width: calc(100% / 16); /* the 16 here is x and needs to change*/
     height: calc(100% / 16);
+}
+
+button{
+    padding: 1em;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.btnWrapper{
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
